test/expected/k_namespace_typedef_i.out
struct A { namespace B { typedef int Int; } }; show user typedef
                     ^
22: error: namespace can not nest inside struct
